# django3-todolist

./: .gitignore  README.md  manage.py  pr.bat  pyproject.toml
todo/: admin.py  models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_tag_todo_tag.py  0003_tag_user.py
todo/templates/todo/: add-todo.html  base.html  completed-todos.html  control_tags.html  create_tag.html  current-todos.html  delete-todo.html  delete_tag.html  detail_tag.html  home.html  login-user.html  sign-up-user.html  up-date-todo.html  update_tag.html
todolist/: settings.py  urls.py
