[tool.poetry]
name = "django3-todolist"
version = "0.1.0"
description = ""
authors = ["Mikhailiuk-Dmitriy <dmitriymikhailiuk@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
mypy = "^1.0.1"
requests = "^2.28.2"
djangorestframework = "^3.14.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
django-stubs = "^1.15.0"
python-dotenv = "^1.0.0"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.artifacts.*
    | .*\.github.*
    | .*\.idea.*
    | .*\.vscode.*
    | .*docs.*
)
'''

[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".artifacts",
    ".github",
    ".idea",
    ".vscode",
    "docs",
]


[tool.mypy]
cache_dir = ".artifacts/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
    ".artifacts/*",
    ".github/*",
    ".idea/*",
    ".vscode/*",
    "docs/*",
]
files = ["."]
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


